--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <ul class="nav list-unstyled nav-underline collapse navbar-collapse justify-content-lg-end" id="menu">
+        <ul class="nav list-unstyled nav-underline collapse navbar-collapse justify-content-lg-end flex-column flex-md-row" id="menu">
           <li><a class="nav-link active" href="#sobre">Sobre nós</a></li>
           <li><a class="nav-link" href="#carreiras">Trabalhe conosco</a></li>
           <li><a class="nav-link" href="#veiculos">Nossos veículos</a></li>
