--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <ul class="nav list-unstyled nav-underline collapse navbar-collapse justify-content-lg-end flex-column flex-md-row" id="menu">
+        <ul
+          class="nav list-unstyled nav-underline collapse navbar-collapse justify-content-lg-end flex-column flex-md-row"
+          id="menu">
           <li><a class="nav-link active" href="#sobre">Sobre nós</a></li>
           <li><a class="nav-link" href="#carreiras">Trabalhe conosco</a></li>
           <li><a class="nav-link" href="#veiculos">Nossos veículos</a></li>
@@ -27,6 +29,33 @@
       </nav>
     </div>
   </header>
+
+  <section id="sobre">
+    <div class="carousel slide" id="carousel" data-bs-ride="carousel">
+      <button type="button" class="carousel-control-prev" data-bs-target="#carousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button type="button" class="carousel-control-next" data-bs-target="#carousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100 object-fit-cover" src="./imgs/slides/slide-1.jpg" alt="Capô de um carro BMW">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100 object-fit-cover" src="./imgs/slides/slide-2.jpg" alt="Capô de um carro BMW">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100 object-fit-cover" src="./imgs/slides/slide-3.jpg" alt="Capô de um carro BMW">
+        </div>
+      </div>
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active"></button>
+        <button type="button" data-bs-target="#carousel" data-bs-slide-to="1"></button>
+        <button type="button" data-bs-target="#carousel" data-bs-slide-to="2"></button>
+      </div>
+    </div>
+  </section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
