--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         <span class="carousel-control-next-icon"></span>
       </button>
       <div class="carousel-inner">
-        <div class="carousel-item active">
+        <div class="carousel-item active" data-bs-interval="3000">
           <img class="d-block w-100 object-fit-cover" src="./imgs/slides/slide-1.jpg" alt="Capô de um carro BMW">
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item" data-bs-interval="3000">
           <img class="d-block w-100 object-fit-cover" src="./imgs/slides/slide-2.jpg" alt="Capô de um carro BMW">
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item" data-bs-interval="3000">
           <img class="d-block w-100 object-fit-cover" src="./imgs/slides/slide-3.jpg" alt="Capô de um carro BMW">
         </div>
       </div>
