--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>BMW - Landing Page</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Staatliches&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./main.css">
 </head>
 
@@ -30,7 +33,7 @@
     </div>
   </header>
 
-  <section id="sobre">
+  <section>
     <div class="carousel slide" id="carousel" data-bs-ride="carousel">
       <button type="button" class="carousel-control-prev" data-bs-target="#carousel" data-bs-slide="prev">
         <span class="carousel-control-prev-icon"></span>
@@ -54,6 +57,29 @@
         <button type="button" data-bs-target="#carousel" data-bs-slide-to="1"></button>
         <button type="button" data-bs-target="#carousel" data-bs-slide-to="2"></button>
       </div>
+    </div>
+    <div id="sobre" class="container py-5">
+      <div class="row mb-2">
+        <h2 class="title text-center">Sobre <span class="text-colored">nós</span></h2>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <img class="d-block w-100 rounded" src="./imgs/fabrica.jpg" alt="fabrica de carros">
+        </div>
+        <div class="col-md-6">
+          <p class="mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio dolor nemo minima delectus.
+            Neque, ducimus
+            in! Perspiciatis nihil amet, ipsam hic assumenda unde ipsa quas maxime ratione perferendis dignissimos
+            tempore.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, odit ipsa at minus, eius animi
+            exercitationem est laboriosam itaque commodi pariatur ut quisquam, officiis molestias adipisci perferendis
+            sit dolores nemo.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas saepe animi assumenda placeat
+            recusandae, dolorem eum magni fuga odio atque facere fugit impedit, sequi, quod cum. Ratione, fuga? Iste,
+            facere?</p>
+        </div>
+      </div>
+
     </div>
   </section>
 
